finished task: Student Profile
