# src/publicRoutes.ts
@@ -3,6 +3,7 @@ import { signIn, signUp } from "./controllers/userControllers";
 import {getAcademicAreas} from "./controllers/adminControllers/curatorUtils";
 import {courses} from "./controllers/courseControllers";
 import {getReview, getReviews} from "./controllers/reviewControllers.ts";
+import {contactServices} from "./controllers/profileControllers/profileManagementControllers.ts";
 
 let router = express.Router()
 
@@ -13,5 +14,7 @@ router.get('/academicAreas', getAcademicAreas)
 router.get('/courses', courses)
 router.get('/reviews', getReviews)
 router.get('/reviews/:id', getReview)
+//Instagram, Email, WeChat:
+router.get('/contactServices', contactServices)
 
 export const publicRoutes = router;
